--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@ footer a, footer a:link {
   <footer><a target="blank" href="#">Alam @ 2016</a></footer>
   </p>
 </div>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-
+<!--  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>-->
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="rc4.js"></script>
     <script src="js/index.js"></script>
 
